--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
-<html><head>    <title>Charchit Gupta | interactive resume</title>
+<html>
+<head>
+    <title>Charchit Gupta | interactive resume</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular-sanitize.js"></script>
-    <link rel="stylesheet" href="css/console.css" /></head><body onclick="focusOnInput()">	<div class="console" data-ng-app="Console" data-ng-controller="consoleController">		<b style="font-size: 1em; font-weight: 900;">				  ======================================================== 
+    <link rel="stylesheet" href="css/console.css" />
+</head>
+<body onclick="focusOnInput()">
+	<div class="console" data-ng-app="Console" data-ng-controller="consoleController">
+		<b style="font-size: 1em; font-weight: 900;">
+				  ======================================================== 
 			<br />Hello World! <br />Type "help" and press return [enter] to get more info 
-			<br />========================================================		</b>
+			<br />========================================================
+		</b>
 		<br /> 
 		<span ng-repeat="record in history"> 
 			<span>{{userName + record.cmd}}</span><br /> 
-			<span class="result" ng-bind-html="getHTML(record.result)"></span>		</span>
+			<span class="result" ng-bind-html="getHTML(record.result)"></span>
+		</span>
 		
 		<span id="input">{{userName + newInput }}</span><span id="cursor"></span>
-				<form class="invisible" data-ng-submit="submit()">			<input autocomplete="off" type="text" id="newInput" class="invisible" data-ng-trim="false" data-ng-model="newInput" autofocus /> 
+		
+		<form class="invisible" data-ng-submit="submit()">
+			<input autocomplete="off" type="text" id="newInput" class="invisible" data-ng-trim="false" data-ng-model="newInput" autofocus /> 
 			<a class="invisible" href="mailto:charchitgupta18@gmail.com" target="_blank" id="link_mail"></a> 
-			<a class="invisible" href="./files/CharchitGupta.pdf" target="_blank" id="link_resume"></a> 
-			<a class="invisible" href="https://in.linkedin.com/in/charchitgupta" target="_blank" id="link_linkedin"></a>			<button class="invisible" id="submit" type="submit"></button>		</form>	</div>	<script src="js/ngcontroller.js" ></script>
+			<a class="invisible" href="./files/ARPIT_BASER.pdf" target="_blank" id="link_resume"></a> 
+			<a class="invisible" href="https://in.linkedin.com/in/charchitgupta" target="_blank" id="link_linkedin"></a>
+			<button class="invisible" id="submit" type="submit"></button>
+		</form>
+	</div>
+	<script src="js/ngcontroller.js" ></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -24,4 +39,6 @@
   ga('create', 'UA-65423577-1', 'auto');
   ga('send', 'pageview');
 
-</script></body></html>
+</script>
+</body>
+</html>
