--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Charchit Gupta | interactive resume</title>
+    <title>Arpit Baser | interactive resume</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular-sanitize.js"></script>
     <link rel="stylesheet" href="css/console.css" />
@@ -23,9 +23,9 @@
 		
 		<form class="invisible" data-ng-submit="submit()">
 			<input autocomplete="off" type="text" id="newInput" class="invisible" data-ng-trim="false" data-ng-model="newInput" autofocus /> 
-			<a class="invisible" href="mailto:charchitgupta18@gmail.com" target="_blank" id="link_mail"></a> 
+			<a class="invisible" href="mailto:baserarpit@gmail.com" target="_blank" id="link_mail"></a> 
 			<a class="invisible" href="./files/ARPIT_BASER.pdf" target="_blank" id="link_resume"></a> 
-			<a class="invisible" href="https://in.linkedin.com/in/charchitgupta" target="_blank" id="link_linkedin"></a>
+			<a class="invisible" href="https://www.linkedin.com/in/arpit-baser-48b99a114" target="_blank" id="link_linkedin"></a>
 			<button class="invisible" id="submit" type="submit"></button>
 		</form>
 	</div>
