--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="console" data-ng-app="Console" data-ng-controller="consoleController">
 		<b style="font-size: 1em; font-weight: 900;">
 				  ======================================================== 
-			<br />Welcome to my profile! <br />Type "help" and press return [enter] to get more info 
+			<br />Welcome to Arpit Baser's profile! <br />Type "help" and press return [enter] to get more info 
 			<br />========================================================
 		</b>
 		<br /> 
