--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<input autocomplete="off" type="text" id="newInput" class="invisible" data-ng-trim="false" data-ng-model="newInput" autofocus /> 
 			<a class="invisible" href="mailto:baserarpit@gmail.com" target="_blank" id="link_mail"></a> 
 			<a class="invisible" href="./files/ARPIT_BASER.pdf" target="_blank" id="link_resume"></a> 
-			<a class="invisible" href="https://www.linkedin.com/in/arpit-baser-48b99a114" target="_blank" id="link_linkedin"></a>
+			<a class="invisible" href="https://in.linkedin.com/in/arpit-baser-48b99a114" target="_blank" id="link_linkedin"></a>
 			<button class="invisible" id="submit" type="submit"></button>
 		</form>
 	</div>
